# not-discord.py-server

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  sort-whitelist.py
src/: app.py  config.py
src/templates/: captcha.html  index.html
