[tool.poetry]
name = "not-discord.py-server"
version = "0.1.0"
description = ""
authors = ["Nihaal Sangha <me@niha.al>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.24.0"
requests-oauthlib = "^1.3.0"
pyyaml = "^5.3.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
flake8-2020 = "^1.6.0"
flake8-broken-line = "^0.2.0"
flake8-bugbear = ">=20.1.4"
flake8-builtins = "^1.5.3"
flake8-commas = "^2.0.0"
flake8-comprehensions = "^3.2.2"
flake8-pie = "^0.5.0"
flake8-printf-formatting = "^1.1.0"
flake8-pyi = ">=20.5.0"
flake8-pytest-style = "^1.1.1"
flake8-requirements = "^1.3.2"
flake8-sql = "^0.4.0"
pep8-naming = "^0.10.0"

black = ">=20.8b1"
isort = "^5.4.2"

[tool.black]
line-length = 120
target-version = ['py38']
skip-string-normalization = true
include = '\.pyi?$'

[tool.isort]
line_length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
